fix: fix modal style height overflow

--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@
 }
 .rc-upload-file-modal-image {
   max-width: 500px;
-  max-height: 400px;
+  max-height: 500px;
   padding: 12px;
 }
 
